@@ -1,3 +1,12 @@
+2009-05-10  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/plot/XYPlot.java
+    (equals): Check fixedLegendItems,
+    (clone): Clone fixedLegendItems,
+    * tests/org/jfree/chart/plot/junit/XYPlotTests.java
+    (testEquals): Added test for fixedLegendItems,
+    (testCloning3): New test.
+
 2009-05-05  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/ChartPanel.java
